fix: revise z-index

--- a/packages/vuepress-theme-mix/src/client/styles/highlight.scss
+++ b/packages/vuepress-theme-mix/src/client/styles/highlight.scss
@@ -79,7 +79,7 @@ div[class*='language-'] {
     border-radius: 100%;
     box-shadow: 0 0 0 1px #da3d42, 22px 0 0 0 #fabe3b, 22px 0 0 1px #ecb03e,
       44px 0 0 0 #38cd46, 44px 0 0 1px #2eae32;
-    z-index: 999;
+    z-index: 10;
   }
 
   pre {
